infrastructure/keycloak/templates/ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-production
  namespace: keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.homelab.ftscode.de
      secretName: letsencrypt-prod-tls
  rules:
    - host: auth.homelab.ftscode.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-headless
                port:
                  number: 8080
